--- a/client/src/components/game/userUI.module.css
+++ b/client/src/components/game/userUI.module.css
@@ -3,10 +3,9 @@
 .topbar {
     display: flex;
     margin: auto;
-    margin-top: 40px;
     box-sizing: content-box;
     width: 90%;
-    border: solid #5B6DCD 1px;
+    font-size: 2em;
     padding: 5px;
     color: red
 }
