--- a/client/src/components/game/questions.module.css
+++ b/client/src/components/game/questions.module.css
@@ -1,6 +1,6 @@
 .flexcontainer {
     display: flex;
-    background-color: #f1f1f1;
+    background-color: transparent;
     width: 60%;
     height: 20em;
     justify-content: center;
