--- a/client/src/components/game/game.module.css
+++ b/client/src/components/game/game.module.css
@@ -8,11 +8,12 @@
     background-image: url('../../../dist/assets/game3.jpeg') ;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%; 
-    height: 100%; 
+    width: 100vw; 
+    height: 100vh; 
     position: fixed; 
     left: 0px; 
     top: 0px; 
+    overflow: scroll;
    }
 
 .fullscreenbox {
