Added Question Counter w/ Timer

--- a/client/src/components/game/questions.module.css
+++ b/client/src/components/game/questions.module.css
@@ -12,6 +12,14 @@
     flex-direction: column;
   }
 
+  .timerbar {
+    color: black;
+  }
+
+  .hide {
+    display: none
+  }
+
   .correct {
     max-width:25%;
     height:auto;
