--- a/client/src/components/game/questions.module.css
+++ b/client/src/components/game/questions.module.css
@@ -24,7 +24,7 @@
   .question {
     margin-top: 25%;
     margin-bottom: 5%;
-    font-size: .6em;
+    font-size: 1em;
     font-weight: bolder;
     position: relative;
     width: 100%;display: flex;
