--- a/client/src/components/lost/lost.module.css
+++ b/client/src/components/lost/lost.module.css
@@ -4,6 +4,6 @@
     left: 40%;
     margin-top: -50px;
     margin-left: -50px;
-    width: 200px;
-    height: 200px;
+    width: 20vw;
+    height: 20vh;
 }
